fix style in some tables after readability enhancements

--- a/AlmaDL-journalStyleSheet.scss
+++ b/AlmaDL-journalStyleSheet.scss
@@ -873,6 +873,15 @@ table.listing td.heading, table.info td.heading, table.info td.headseparator {
 		color: $body-color;
 	}
 }
+table.listing tr.heading a, table.listing tr.heading a:link, table.listing tr.heading a:visited {
+	@if $header-font-color != null {
+		color: $header-font-color;
+	} @else if $header-color == $body-color {
+		color: $body-color;
+	} @else {
+		color: $body-color;
+	}
+}
 table.listing tr.heading td, table.listing td.heading, table.info td.heading {
 	font-weight: bold;
 	text-align: center;
